# 2025-Epita-Programmation-par-Contraintes

./: .gitignore  README.md  VRPSovler.cs  benchmark.py  case_data.json  collision_free.py  connect4_report.ipynb  cpu-cooler_data.json  cpu_data.json  doc.md  docker-compose.yml  flake.nix  game.py  gui.py  install.sh  main.ipynb  main.py  memory_data.json  motherboard_data.json  plot.py  pyproject.toml  requirements.txt  robots-api.py  robots-ortools-2.py  robots-ortools-3.py  robots-ortools.py  robots.py  robots_ortools_3.py  satellite.ipynb  satellite_scheduler.py  solver.ipynb  storage-devices_data.json  test.ipynb  test.txt  test_generation.ipynb  tests.ipynb  video-card_data.json  visualization.py
23_G469_MultirobotsWarehouseTaskAssignment/: README.md  requirements.txt
29-automatic-tests-generation/: .gitignore  flake.nix  pyproject.toml  requirements.txt  subject.md
29-automatic-tests-generation/src/: chat.py  coverage_utils.py  interaction_utils.py  io_utils.py  main.py  mixed_t_way.py  plot.py  twise.py
29-automatic-tests-generation/src/tests/: complex.py  complex2.py  test_discout.py  test_twise.py
Frontend/: .prettierrc  package.json
Groupe_12 _Puissance_4/: .gitignore  README.md  board.py  connect4_report.ipynb  gui.py  requirements.txt
Mots-croises/: MotCroise.py  README.md  definitions.py  mot_croise.ipynb  output.html  slides_techniques.html
SatelliteCaptureScheduler/: README.md  main.py
ai/: always_first.py  genetic.py  leo_algo.py  minimax.py  montecarlo.py  negamax.py  pattern_based.py  random_ai.py
backend/: Dockerfile  pom.xml  robots-api.py  satellite_scheduler.py
benchmark_results/: benchmark_results_errors_20250410-123253.csv  benchmark_results_pairwise_20250410-123253.csv
data/: case_data.json
framework/: AnnealingOptimizer.py  AnnealingTester.py  PsoOptimizer.py  PtfEvaluator.py  alternate_asset.py  asset.py  constraint.py  requirements.txt  server.py  sharpe_opti.py  test.py
frontend/: index.html  package-lock.json  package.json
generate_grid/: generate_grid.py
groupe17_Configuration_Produits/: README.md  docker-compose.yml  documentation.ipynb
groupe87-demineur/: classe.py  main.py  requirements.txt  test.py
groupe_127_GA_Voitures/: README.md
implems/: backtrack.py  constraint.py  (+3 more)
subject23/mapf-pibt/: CMakeLists.txt  app.cpp  compile_commands.json
subject23/mapf-pibt/instances/: instance.txt
subject23/mapf-pibt/map/: map_packer.map
subject23/mapf-pibt/mapf/: CMakeLists.txt
subject23/mapf-pibt/mapf/include/: api.hpp  pibt.hpp  pibt_api.hpp  problem.hpp  singleton.hh  solver.hpp  struct_api.hpp
subject23/mapf-pibt/mapf/src/: CMakeLists.txt  api.cpp  pibt.cpp  pibt_api.cpp  problem.cpp  singleton.hxx  solver.cpp
(+475 files in other folders)
