[project]
name = "2025-epita-programmation-par-contraintes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage==7.6.1",
    "openai==1.72.0",
    "python-dotenv==1.1.0",
    "z3==0.2.0",
    "z3-solver>=4.14.1.0",
]
